--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ ol, ul {
   width: 34px;
 }
 
+.square_highlighted {
+  background-color: orange;
+  transition: background-color 1s ease;
+}
+
 .square:focus {
   outline: none;
 }
